<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".wedding.WeddingPaketActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/myaccount" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <!-- Scrollable content -->
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:textSize="36dp"
            tools:text="@string/fullname"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFullname"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/poppins"
            android:textSize="36dp"
            tools:text="@string/balance"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"/>

        <ImageView
            android:id="@+id/iconTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvFullname"
            android:layout_toRightOf="@id/tvBalance"
            android:src="@drawable/tambah"/>

    </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:background="@drawable/bg_profil"
                android:drawableStart="@drawable/email"
                android:paddingLeft="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:background="@drawable/bg_profil"
                android:drawableStart="@drawable/gender2"
                android:paddingLeft="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:background="@drawable/bg_profil"
                android:drawableStart="@drawable/phone"
                android:paddingLeft="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="138dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:background="@drawable/bg_profil"
                android:drawableStart="@drawable/address"
                android:paddingLeft="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_border"
                android:text="@string/edit"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_logout"
                android:text="@string/logout"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

</LinearLayout>