<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".wedding.BookingWedding1Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/bookingpaket" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!-- Scrollable content -->
    </androidx.core.widget.NestedScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingVertical="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/tvCategoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins"
                android:text="@string/wedding"
                android:textAllCaps="true"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/wedding1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCategoryTitle"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_paket"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@id/tvPackageDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/paketWedding1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wedding1">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfDate"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:hint="@string/date"
                    app:boxStrokeColor="@null"
                    app:startIconDrawable="@drawable/date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/bg_field" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfAddress"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tfDate"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    app:boxStrokeColor="@null"
                    app:startIconDrawable="@drawable/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/bg_field"
                        android:hint="@string/address" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvSK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlEditText"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins"
                android:text="@string/sk"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isiSK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSK"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/isiSK"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />

            <CheckBox
                android:id="@+id/cbSetuju"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/isiSK"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/poppins"
                android:text="@string/setuju"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbSetuju"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/poppins"
                android:text="@string/lanjut"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>