<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BalanceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/topUpBalance" />

    <TextView
        android:id="@+id/tvYourBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins"
        android:text="@string/yourBalance"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/myBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvYourBalance"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:inputType="numberDecimal"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourBalance" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTopUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myBalance"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins"
        android:text="@string/topUp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
       android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>